# powerletrics

./: .gitignore  MANIFEST.in  README.md  ebpf.c  ebpf_python.c  powerletrics.py  pyproject.toml  weights.conf
http/: index.html  script.js
http/static/: datatables.min.css
powerletrics/: Makefile  config.conf  ebpf_python.c  powerletrics.py
powerletrics/http/: index.html  script.js
powerletrics/http/static/: datatables.min.js
providers/: Makefile
providers/rapl/: Makefile  metric-provider-binary
